--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,36 @@
-name: Deploy React to cPanel Subdomain
+name: Deploy React App to cPanel via FTP
 
 on:
   push:
     branches:
-      - main  # Change if your default branch is different
+      - main  # Trigger deploy when you push to the 'main' branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.CPANEL_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H 136.243.112.224 >> ~/.ssh/known_hosts
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Use the version that fits your project
 
-      - name: Install Dependencies & Build React App
+      - name: Install dependencies
         run: |
           npm install
-          npm run build
 
-      - name: Deploy via rsync to Subdomain Directory
+      - name: Build the React app
         run: |
-          rsync -avz --delete ./build/ poudels2@136.243.112.224:/home/poudels2/public_html/portfolio.poudelsangam.com.np/
+          npm run build  # Creates a production-ready build
+
+      - name: Upload build to cPanel via FTP
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with:
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: "./build"  # React build directory
+          server-dir: "/home/poudels2/"  # cPanel directory for your React app
