--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          npm install crypto-browserify  # Install crypto polyfill
 
       - name: Build the React app
         run: |
